--- a/src/main/resources/templates/todolist.html
+++ b/src/main/resources/templates/todolist.html
@@ -27,8 +27,8 @@
                     <tr th:each="todo : ${todos}">
                         <td th:text="${todo.getId()}"></td>
                         <td th:text="${todo.getTitle()}"></td>
-                        <td th:text="${todo.isDone()} ? '&#10003' : '&#10004'"></td>
-                        <td th:text="${todo.isUrgent()} ? '&#10003' : '&#10004'"></td>
+                        <td th:value="${todo.isDone()} ? '&#10003' : '&#10004'"></td>
+                        <td th:value="${todo.isUrgent()} ? '&#10003' : '&#10004'"></td>
                         <td>
                             <a class="label label-danger" th:href="@{'/' + ${todo.getId()} + '/delete'}">delete</a>
                         </td>
