--- a/src/main/resources/templates/todolist.html
+++ b/src/main/resources/templates/todolist.html
@@ -27,7 +27,7 @@
                     <tr th:each="todo : ${todos}">
                         <td th:text="${todo.getId()}"></td>
                         <td th:text="${todo.getTitle()}"></td>
-                        <td th:text="${todo.isUrgent()} ? '&#10004' : '&#10060'"></td>
+                        <td th:text="${todo.isUrgent()} ? ${notCompletedSign} : ${completedSign}"></td>
                         <td th:text="${todo.isDone()} ? '&#10004' : '&#10060'"></td>
                         <td>
                             <a class="label label-danger" th:href="@{'/' + ${todo.getId()} + '/delete'}">delete</a>
