--- a/src/main/resources/templates/add_todo.html
+++ b/src/main/resources/templates/add_todo.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Create New Todo</title>
+    <title>Add New Todo</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/style.css}"/>
     <meta charset="utf-8" />
 </head>
-<body>
+<body class="text-center">
     <h1 th:text="'Add new todo'"></h1>
     <br>
     <form action="#" th:action="@{/todo/add}" method="post">
