--- a/src/main/resources/templates/add_todo.html
+++ b/src/main/resources/templates/add_todo.html
@@ -17,7 +17,7 @@
         <input role="button" class="btn btn-sm btn-success" type="submit" value="Submit"/>
     </form>
     <h4>
-        <a role="button" class="btn btn-xs btn-info" th:href=@{/todo}>Back</a>
+        <a role="button" class="btn btn-xs btn-info" th:href="@{/todo}">Back</a>
     </h4>
     <script src="webjars/jquery/1.11.1/jquery.min.js"></script>
     <script src="webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
