--- a/src/main/resources/templates/assigneelist.html
+++ b/src/main/resources/templates/assigneelist.html
@@ -9,10 +9,10 @@
 <body>
     <h1 class="text-center" th:text="'List of Assignees'"></h1>
     <h3 class="text-center">
-        <a role="button" class="btn btn-warning" th:href=@{/assignees/add}>Add new Assignee</a>
+        <a role="button" class="btn btn-warning" th:href="@{/assignees/add}">Add new Assignee</a>
     </h3>
     <h4 class="text-center">
-        <a role="button" class="btn btn-xs btn-info" th:href=@{/todo}>Back</a>
+        <a role="button" class="btn btn-xs btn-info" th:href="@{/todo}">Back</a>
     </h4>
     <br>
     <div class="container">
