--- a/src/main/resources/templates/todolist.html
+++ b/src/main/resources/templates/todolist.html
@@ -22,7 +22,7 @@
                                 <button type="submit">
                                     <span class="glyphicon glyphicon-search"></span>
                                 </button>
-                                    </span>
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </div>
     </form>
     <h3 class="text-center">
-        <a role="button" class="btn btn-warning" th:href=@{/assignees}>List of Assignees</a>
+        <a role="button" class="btn btn-warning" th:href="@{/assignees}">List of Assignees</a>
     </h3>
     <br>
     <div class="container">
